--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     </a>
 
 
-      <button class="border hover:border-slate-900 p-3 hover:scale-105 transition duration-300 ease-in-out">
+      <a href="#contact" class="border hover:border-slate-900 p-3 hover:scale-105 transition duration-300 ease-in-out">
         CONTACT
-      </button>
+      </a>
 
     </div>
 
@@ -132,10 +132,10 @@
           <div class="py-6 flex gap-2">
             <p class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono">C (gcc 10.3)</p>
           </div>
-          <button
+          <a href="https://github.com/Mami-Em/credit/tree/main"
             class="bg-emerald-400 border-2 border-slate-700 text-slate-700 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
             Source Code
-          </button>
+        </a>
 
           <a href="https://replit.com/@MaminiainaRaval/Credit?v=1"
             class="border-2 border-slate-700 text-slate-700 ml-2 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
@@ -290,7 +290,7 @@
   </section>
 
 
-  <section class="h-fit bg-slate-900 text-slate-50 p-6 sm:flex sm:flex-col sm:justify-center sm:items-center sm:w-full">
+  <section id="contact" class="h-fit bg-slate-900 text-slate-50 p-6 sm:flex sm:flex-col sm:justify-center sm:items-center sm:w-full">
     <div class="font-bold text-3xl">
       Get in touch.
     </div>
