--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
             each’s format.</p>
 
           <div class="py-6 flex gap-2">
-            <p class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono">C (gcc 10.3)</p>
+            <p class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono">
+                <a href="https://cplusplus.com/">
+
+                    C (gcc 10.3)
+                </a>
+            </p>
           </div>
           <a href="https://github.com/Mami-Em/credit/tree/main"
             class="bg-emerald-400 border-2 border-slate-700 text-slate-700 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
@@ -159,11 +164,31 @@
             endangered species.</p>
 
           <p class="py-6 leading-loose">
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">NextJs</span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="https://nextjs.org/">
+
+                    NextJs
+                </a>
+            </span>
             <span
-              class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Typescript</span>
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Tailwind</span>
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Github</span>
+              class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+              <a href="https://www.typescriptlang.org/">
+
+                  Typescript
+              </a>
+            </span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="https://tailwindcss.com/">
+
+                    Tailwind
+                </a>
+            </span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="">
+
+                    Github
+                </a>
+            </span>
           </p>
           <button
             class="bg-emerald-400 border-2 border-slate-700 text-slate-700 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
@@ -193,13 +218,43 @@
 
           <p class="py-6 leading-loose">
             <span
-              class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Javascript</span>
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Python</span>
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Flask</span>
+              class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+              <a href="https://www.javascript.com/">
+
+                  Javascript
+              </a>
+            </span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="https://www.python.org/">
+
+                    Python
+                </a>
+            </span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="https://flask.palletsprojects.com/en/2.2.x/">
+
+                    Flask
+                </a>
+            </span>
             <span
-              class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">PostgreSQL</span>
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Heroku</span>
-            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">Tailwind</span>
+              class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+              <a href="https://www.postgresql.org/">
+
+                  PostgreSQL
+              </a>
+            </span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="https://www.heroku.com/">
+
+                    Heroku
+                </a>
+            </span>
+            <span class="bg-slate-200 w-fit h-fit px-1 text-slate-500 text-sm rounded-lg font-mono mr-2">
+                <a href="https://tailwindcss.com/">
+
+                    Tailwind
+                </a>
+            </span>
           </p>
           <button
             class="bg-emerald-400 border-2 border-slate-700 text-slate-700 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
