--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       Things I have built.
     </div>
 
-    <div class="flex flex-col gap-6 py-6 sm:w-2/3 sm:">
+    <div class="flex flex-col gap-6 py-6 sm:w-2/3">
 
       <div class="bg-slate-50 h-fit">
         <img src="./cardmapr-nl-s8F8yglbpjo-unsplash.jpg" />
@@ -137,15 +137,19 @@
                 </a>
             </p>
           </div>
-          <a href="https://github.com/Mami-Em/credit/tree/main"
+
+          <div class="my-3">
+            <a href="https://github.com/Mami-Em/credit/tree/main"
             class="bg-emerald-400 border-2 border-slate-700 text-slate-700 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
             Source Code
-        </a>
+         </a>
 
           <a href="https://replit.com/@MaminiainaRaval/Credit?v=1"
             class="border-2 border-slate-700 text-slate-700 ml-2 p-3 font-mono hover:scale-105 transition duration-300 ease-in-out">
             Live Demo
         </a>
+          </div>
+          
 
         </div>
 
