--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-  <div class="flex top-0 justify-between items-center text-sm text-slate-700 p-2 border-b sm:p-4 lg:p-0 lg:w-screen lg:m-0">
+  <div class="flex top-0 justify-between items-center text-sm text-slate-700 p-2 border-b sm:p-4 lg:p-0 lg:w-screen lg:m-0 lg:sticky lg:top-0 bg-slate-50 z-50">
     <img src="." class="" />
 
 
@@ -35,7 +35,7 @@
       </svg>
     </button>
 
-    <div class="hidden text-md sm:block sm:flex sm:flex-rows lg:text-lg font-mono">
+    <div class="hidden text-md sm:block sm:flex sm:flex-rows lg:text-lg ">
         <p class="p-4 text-center hover:scale-105 transition duration-300 ease-in-out">
             <a href="#about">
                 About me
@@ -147,8 +147,6 @@
       </a>
 
     </div>
-
-
 
 
   </section>
