--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-  <div class="flex top-0 justify-between items-center text-sm text-slate-700 p-2 border-b sm:p-4 lg:p-0 lg:w-screen lg:m-0 lg:sticky lg:top-0 bg-slate-50 z-50">
+  <div class="flex top-0 justify-between items-center text-sm font-semibold font-mono text-slate-500 p-2 border-b sm:p-4 lg:p-0 lg:w-screen lg:m-0 lg:sticky lg:top-0 bg-slate-50 z-50">
     <img src="." class="" />
 
 
