--- a/index.html
+++ b/index.html
@@ -319,6 +319,33 @@
   </section>
 
 
+  <section class="h-fit bg-slate-50 text-slate-900 p-6 lg:p-12 sm:flex sm:flex-col sm:justify-center sm:items-center lg:w-screen lg:gap-8">
+    <div class="font-bold text-3xl lg:text-5xl">
+        Journey
+    </div>
+
+    <div class="lg:w-1/2 border h-fit lg:p-8 p-4 rounded mt-8 lg:m-8 mb-0">
+        
+        <div class="p-2 lg:p-4">
+            <p class="font-semibold lg:text-2xl">Bachelor of Science, Computer and Information System</p>
+            <p class="">Sept, 2021 - Present</p>
+            <a href="" class="text-indigo-500">verify</a>
+        </div>
+        
+        <div class="p-2 lg:p-4">
+            <p class="font-semibold lg:text-2xl">Harvard CS50 Introduction to Python</p>
+            <p class="">Jul, 2022</p>
+            <a href="" class="text-indigo-500">verify</a>
+        </div>
+
+        <div class="p-2 lg:p-4">
+            <p class="font-semibold lg:text-2xl">NSLS Foundations of leadership</p>
+            <p class="">Mar, 2022</p>
+            <a href="" class="text-indigo-500">verify</a>
+        </div>
+    </div>
+  </section>
+
   <section id="jobs" class="h-fit bg-slate-50 text-slate-900 p-6 lg:p-12 sm:flex sm:flex-col sm:justify-center sm:items-center lg:w-screen lg:gap-8">
     <div class="font-bold text-3xl lg:text-5xl">
       Latest Job
