--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>RA Mami</title>
 </head>
-<body class="scroll-smooth max-w-lg w-auto lg:absolute lg:left-1/2 lg:-translate-x-1/2">
+<body class="scroll-smooth max-w-lg w-auto lg:absolute lg:left-1/2 lg:-translate">
 
     <!-- p-4
     sm:px-8, py-6
@@ -25,6 +25,15 @@
                 <p class="text-center text-xl font-light tracking-wide">Hi! Meet Your new RA Mami</p>
                 <p class="text-center text-indigo-500 p-4">Contact Mami</p>
             </div>  
+        </div>
+
+        <div class="flex items-center justify-center">
+            <div class="w-8">
+
+                <svg xmlns="http://www.w3.org/2000/svg" class="animate-bounce" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
+                    <path strokeLinecap="round" strokeLinejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+                </svg>              
+            </div>
         </div>
     </header>
 
