--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>RA Mami</title>
 </head>
-<body class="scroll-smooth max-w-lg w-auto lg:absolute lg:left-1/2 lg:-translate">
+<body class="scroll-smooth max-w-lg w-auto md:absolute md:left-1/2 md:-translate-x-1/2">
 
     <!-- p-4
     sm:px-8, py-6
@@ -30,7 +30,7 @@
         <div class="flex items-center justify-center">
             <div class="w-8">
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="animate-bounce" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
+                <svg xmlns="http://www.w3.org/2000/svg" class="animate-bounce z-50" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
                     <path strokeLinecap="round" strokeLinejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
                 </svg>              
             </div>
