--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     sapce-y-4 -->
     
     <header>
-        <div class="p-6">
+        <div class="px-6 pt-6">
             <div class="rounded-xl h-60 overflow-hidden border">
                 <img src="./New_ra.jpeg" alt="">
             </div>
 
-            <div class="p-6">
+            <div class="px-6 pt-6">
                 <p class="text-center text-xl font-light tracking-wide">Hi! Meet Your new RA Mami</p>
                 <p class="text-center text-indigo-500 p-4">Contact Mami</p>
             </div>  
         </div>
 
-        <div class="flex items-center justify-center">
+        <div class="p-6 flex items-center justify-center">
             <div class="w-8">
 
                 <svg xmlns="http://www.w3.org/2000/svg" class="animate-bounce z-50" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
@@ -112,7 +112,7 @@
     </main>
     
 
-    <footer class="absolute sticky bottom-0 w-full">
+    <footer class="absolute sticky bottom-0 w-full z-20">
 
         <div class="p-6">
 
