--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="px-6 pt-6">
             <div class="rounded-xl h-60 overflow-hidden border">
-                <img src="./New_ra.jpeg" alt="">
+                <img src="./mami.jpeg" class="object-cover w-full h-full"  alt="">
             </div>
 
             <div class="px-6 pt-6">
