--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
 
         <div class="p-6 flex items-center justify-center">
-            <a class="w-8" href="#body" data-aos="zoom-in" data-aos-duration="750">
+            <a class="w-8" href="#body" >
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="animate-bounce w-10 h-10 p-2 z-50 rounded-full bg-white shadow-md" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
+                <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-duration="750" class="animate-bounce w-10 h-10 p-2 z-50 rounded-full bg-white shadow-md" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
                     <path strokeLinecap="round" strokeLinejoin="round" d="M12 4.5v15m0 0l6.75-6.75M12 19.5l-6.75-6.75" />
                 </svg>
                                
@@ -88,7 +88,7 @@
                     <div class="flex flex-col gap-2 w-8/12">
                         <p class="font-semibold">Travel</p>
                         <p class="text-sm leading-6 col-start-1">Mami likes adventure, discover new places, write new stories.</p>
-                        <a class="text-indigo-500 text-xs">Send money to Mami</a>
+                        <a class="text-indigo-500 text-xs" href="https://www.paypal.com/paypalme/mamirav">Send money to Mami</a>
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
                     <div class="flex flex-col gap-2 w-8/12">
                         <p class="font-semibold">Chess</p>
                         <p class="text-sm leading-6 col-start-1">Mami finds the harmony of this game relaxing and beautiful.</p>
-                        <a class="text-indigo-500 text-xs">Challenge Mami</a>
+                        <a class="text-indigo-500 text-xs" href="https://lichess.org/@/Mami-em">Challenge Mami</a>
                     </div>
                 </div>
             </div>
